--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": "16.x",
+    "npm": "7.x"
+  },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.1",
