--- a/.github/workflows/dev_beapilot-front.yml
+++ b/.github/workflows/dev_beapilot-front.yml
@@ -26,7 +26,7 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
@@ -45,6 +45,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
+          path: ./dist
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
