--- a/.github/workflows/dev_beapilot-front.yml
+++ b/.github/workflows/dev_beapilot-front.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy Node.js app to Azure Web App - beapilot-front
 
 on:
@@ -18,17 +21,15 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: Set up environment variables
-        run: |
-          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> $GITHUB_ENV
-          echo "VITE_STRIPE_API_KEY=${{ secrets.VITE_STRIPE_API_KEY }}" >> $GITHUB_ENV
-          echo "VITE_AUTH=${{ secrets.VITE_AUTH }}" >> $GITHUB_ENV
-
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+        env:
+          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+          VITE_STRIPE_API_KEY: ${{ secrets.VITE_STRIPE_API_KEY }}
+          VITE_AUTH: ${{ secrets.VITE_AUTH }}
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
