--- a/.github/workflows/dev_beapilot-front.yml
+++ b/.github/workflows/dev_beapilot-front.yml
@@ -26,6 +26,11 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+
+      - name: Copy web.config file to dist folder
+        run: |
+          cp web.config dist
+
         env:
           VITE_API_URL: ${{ secrets.VITE_API_URL }}
           VITE_STRIPE_API_KEY: ${{ secrets.VITE_STRIPE_API_KEY }}
