--- a/web.config
+++ b/web.config
@@ -10,7 +10,7 @@
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
             <add input="{REQUEST_URI}" pattern="^/(api)" negate="true" />
           </conditions>
-          <action type="Rewrite" url="/dist/index.html" />
+          <action type="Rewrite" url="index.html" />
         </rule>
       </rules>
     </rewrite>
