--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "serve dist"
   },
   "engines": {
     "node": "16.x",
@@ -24,6 +25,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "sass": "^1.63.4",
+    "serve": "^14.2.0",
     "vite": "^2.9.5"
   }
 }
