--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": ".",
   "scripts": {
     "dev": "vite",
+    "phone": "vite --host --mode mobile",
     "build": "vite build",
     "preview": "vite preview",
     "serve": "serve dist"
