--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
